--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,8 @@
 
 --JosefinSans : 'Josefin Sans', sans-serif;
 }
-
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
 *{
     margin: 0;
     padding: 0;
@@ -29,6 +30,9 @@ main{
 #logo{
     width: 160px;
     margin-bottom: 125px;
+}
+#logo-mb{
+    display: none;
 }
 .comming-soon-img{
     width: 45%;
@@ -76,7 +80,7 @@ footer{
 form{
     display: flex;
 }
-input[type=email]{
+input[type=text]{
     width: 100%;
     border: solid 1px var(--Desaturated-Red);
     border-right: none;
@@ -85,24 +89,157 @@ input[type=email]{
     border-top-left-radius: 40px;
     background-color: transparent;
 }
-input[type=email]:focus{
+input[type=text]:focus{
     border: solid 2px var(--Soft-Red);
 }
 button[type=submit]{
     width: 110px;
     position: relative;
-    left: -30px;
+    left: -50px;
     border: none;
     border-radius: 40px;
     background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
     padding-left: 50px;
     box-shadow:  hsl(0, 36%, 70%) 0 2px 10px ;  
 }
-input[type=email]::placeholder{
+button[type=submit]:hover{
+    background: hsl(0, 80%, 86%);
+    cursor: pointer;
+}
+input[type=text]::placeholder{
     color: hsl(0, 80%, 86%);
+}
+#form-control-icon{
+    position: relative;
+    right: 60px;
+    top: 15px;
+}
+#form-control-error{
+    margin: 0 0 0 40px;
+    color: var(--Soft-Red);
+}
+
+@media screen and (max-width:768px) {
+    main{
+        flex-direction: column-reverse;
+    }
+    #logo{
+        display: none;
+    }
+    #logo-mb{
+        display: block;
+        order: 1;
+        width: 160px;
+        margin: 0 0 50px 100px;
+    }
+    .comming-soon-img{
+        width: 100%;
+        height: 400px;
+        background-image: url(/assets/images/hero-mobile.jpg);
+    }
+    .comming-soon-text{
+        width: 100%;
+        padding: 0 150px;
+        margin-top: 20px;
+    
+    }
+    .comming-soon-text span{
+        font-size: 2.5em;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 15px;
+        color: var(--Desaturated-Red);
+    }
+    .comming-soon-text h1{
+        font-size: 2.5em;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 15px;
+    }
+    .comming-soon-text p{
+        font-size: 1em;
+        line-height: 30px;
+        color: var(--Desaturated-Red);
+        margin: 25px 0;
+    }
+    form{
+        display: flex;
+        margin: 0 0 75px 0;
 }
 
 
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+
+@media screen and (max-width:375px) {
+    main{
+        flex-direction: column-reverse;
+        height: 100vh;
+    }
+    #logo{
+        display: none;
+    }
+    #logo-mb{
+        display: block;
+        order: 1;
+        width: 160px;
+        margin: 10px 0 30px 50px ;
+    }
+    .comming-soon-img{
+        width: 100%;
+        height: 300px;
+        margin: 0 0 60px 0;
+        background-image: url(/assets/images/hero-mobile.jpg);
+    }
+    .comming-soon-text{
+        width: 100%;
+        padding: 30px 20px;
+        margin: -50px auto;
+        text-align: center;
+    
+    }
+    .comming-soon-text span{
+        font-size: 1.5em;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 15px;
+        color: var(--Desaturated-Red);
+    }
+    .comming-soon-text h1{
+        font-size: 1.5em;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 15px;
+    }
+    .comming-soon-text p{
+        font-size: 1em;
+        line-height: 25px;
+        color: var(--Desaturated-Red);
+        margin: 20px 0;
+    }
+    form{
+        display: flex;
+        margin: 0 auto;
+    
+}
+    #email{
+        width: 100vw;
+    }
+    #form-control-icon{
+        position: relative;
+        right: 70px;
+        top: 15px;
+        margin: 0;
+        padding: 0;
+    }
+    #form-control-error{
+        margin: 0;
+        color: var(--Soft-Red);
+    }
+    footer{
+        position:initial;
+        margin-top: 50px;
+        width: 100%;
+    }
+}
+
+}
